# football

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/ai/: __init__.py  cache.py  confidence.py  engine.py  exceptions.py  explainability.py  feature_pipeline.py  feature_store.py  interfaces.py  models.py  orchestrator.py  registry.py  rules.py  validation.py
app/analysis/: __init__.py
app/api/: __init__.py  dependencies.py  exceptions.py  middleware.py  schemas.py
app/application/: __init__.py  mapper.py
app/backtesting/: __init__.py  cache.py  calibration.py  comparison.py  dataset.py  engine.py  evaluator.py  exceptions.py  exporter.py  history.py  interfaces.py  metrics.py  models.py  orchestrator.py  persistence.py  registry.py  reporting.py  runner.py  scheduler.py  statistics.py  validator.py
app/cache/: __init__.py  base.py  memory.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  base.py  container.py  dependencies.py
app/dashboard/: __init__.py  charts.py  pages.py  pages_live.py  presenters.py  router.py  statistics.py  views.py  widgets.py
app/database/: __init__.py  base.py  (+1 more)
docker/: Dockerfile  docker-compose.yml
docs/: README.md
scripts/: db.py
tests/: __init__.py  conftest.py  test_ai.py  test_api.py  test_application.py  test_backtesting.py  test_cache.py  test_callbacks.py  test_config.py  test_dashboard.py  test_database.py  test_keyboards.py  test_live.py  test_live_engine_components.py  test_localization.py  test_main.py  test_markdown.py  test_message_factory.py  test_navigation.py  test_prediction.py  test_providers.py  test_router.py  test_signals.py  test_state.py
(+192 files in other folders)
